tests/paczka2/big_fuzzy/16351728.err
Error in line 1: S855 S598 63,5
Error in line 16: C1Krxbs A799 64,9
Error in line 21: C1Krxbs A843 2,4
Error in line 37: D4juayla S855 94,9
Error in line 33: C1Krxbs S598 25,0
Error in line 45: NyVx6 S855 -1,1
Error in line 26: NyVx6 S855 18,4
Error in line 50: tVVSQa9LP A799 72,5
Error in line 49: NyVx6 A843 38,7
Error in line 55: NyVx6 S855 11,1
Error in line 57: fkTCDTtGT A843 87,7
Error in line 60: NyVx6 S598 -1,2
Error in line 58: NyVx6 S598 76,3
Error in line 68: C1Krxbs S855 0,9
Error in line 88: NyVx6 A843 -1,9
Error in line 81: fkTCDTtGT S855 70,3
Error in line 86: D4juayla A843 157,5
Error in line 89: fkTCDTtGT S598 89,9
Error in line 75: tVVSQa9LP S855 140,8
Error in line 104: S855 S598 97,25
Error in line 102: S855 A799 36,9
Error in line 107: S855 S598 150,2
Error in line 114: S855 A799 82,4
Error in line 111: fkTCDTtGT A843 50,2
Error in line 103: tVVSQa9LP A843 152,1
Error in line 126: C1Krxbs S598 66,8
Error in line 118: D4juayla A799 21,3
Error in line 121: tVVSQa9LP S855 97,7
Error in line 131: kZe3fFP3LIR A843 35,1
Error in line 135: kZe3fFP3LIR A799 61,7
Error in line 168: tVVSQa9LP S855 20,0
Error in line 147: D4juayla A843 4,2
Error in line 173: NyVx6 A843 51,2
Error in line 172: tVVSQa9LP A843 91,4
Error in line 183: tVVSQa9LP S598 41,1
Error in line 170: S855 S598 46,2
Error in line 190: S55 S59 51,9
Error in line 184: kZe3fFP3LIR S855 34,8
Error in line 189: S855 A799 76,4
Error in line 195: S855 S598 255,9
Error in line 196: NyVx6 A843 77,8
Error in line 212: D4juayla A799 36,7
Error in line 223: fkTCDTtGT A799 22,4
Error in line 224: D4juayla A799 0,1
Error in line 222: S855 A843 6,5
Error in line 247: fkTCDTtGT A843 9\,2
